# ase-quantumespresso

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/source/: conf.py  index.rst  installation.rst  quickstart.ipynb
docs/source/howtos/: index.rst
src/ase_quantumespresso/: __init__.py  dos.py  espresso.py  ld1.py  namelist.py  projwfc.py  pw2wannier90.py  xspectra.py
src/ase_quantumespresso/parsers/: __init__.py  base.py  dos.py  exit_code.py  ld1.py  projwfc.py  pw.py  utils.py
tests/: conftest.py  test_ld1.py  test_pw.py
